Jython NEWS

The features new in a given release are generally listed under the section for the "b1" release
of that version.

For more details, three sources are available according to type:
 - [ n ], please see https://hg.python.org/jython.
 - [ GH-n ], please see https://github.com/jython/jython.
 - [ FM-n ], please see https://github.com/jython/frozen-mirror.


Jython 2.7.3a1
  Bugs fixed
    - [ GH-150 ] Upgrade Netty to 4.1.73 (various CVEs)
    - [ GH-138 ] Upgrade Guava to 31.0.1 (CVE-2020-8908)
    - [ GH-139 ] Make gradlew executable on Unix/Mac
    - [ GH-119 ] array.array itemsize and serialisation anomalies for unsigned types
    - [ GH-122 ] Upgrade Apache commons-compress to 1.21
    - [ GH-102 ] Fix CRC32.update calls in zlib.py
    - [ GH-98 ] CVE-2019-9740: CRLF injection by url parameter
    - [ GH-97 ] Failures in SNI support affecting pip
    - [ GH-57 ] JavaWebStart compatibility broken
    - [ GH-35 ] Travis CI on JDKs 8, 11, 13 and add Windows to OSes
    - [ GH-50 ] (First) migration from Mercurial corrupted project history
    - [ GH-27 ] -Q new always fails
    - [ 2892 ] Migrate from hg.python.org to GitHub
    - [ GH-4 ] Swap from Mercurial to Git as our SCM tool
    - [ GH-2 ] Transfer closed-fixed issues in NEWS from frozen-mirror

  New Features

    - array.array itemsize of unsigned types is now the same as their signed counterparts, where 
      previously it was mostly double. Internal representations have changed. Anomalies have been
      eliminated between itemsize and the serialisation (tostring() etc.) for unsigned types,
      and in the range of values accepted in different contexts. The size of type 'u' (unicode
      character) is 4 on all platforms. Client code that was working around these anomalies may
      have to change. Overall, the experience should be closer to that with CPython.

    - We no longer aspire to compile Jython with Java 7. (We may use Java 8 features.)
